--- a/next.html
+++ b/next.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8D - Next Page</title>
     <link rel="stylesheet" href="styles.css">
+    <title>8D - Next Page</title>
 </head>
 <body>
-    <div class="menu">
-        <h1>Menu</h1>
-        <ul>
-            <li><a href="foto.html">Foto Event</a></li>
-            <li><a href="https://instagram.com/_8d.diligent_?igshid=czhtd3Q2MGJ1N3Np" target="_blank">Our Social Media</a></li>
-        </ul>
+    <div class="menu-container">
+        <div class="menu">
+            <h1>Menu</h1>
+            <ul>
+                <li><a href="foto.html">Foto Event</a></li>
+                <li><a href="https://instagram.com/_8d.diligent_?igshid=czhtd3Q2MGJ1N3Np" target="_blank">Our Social Media</a></li>
+            </ul>
+        </div>
     </div>
 
     <script src="menu.js"></script>
