--- a/index.html
+++ b/index.html
@@ -9,81 +9,98 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(45deg, #000000, #ffffff);
+            background-color: #1a1a1a;
             color: #ffffff;
+            text-align: center;
         }
 
         header {
+            background-color: #121212;
             padding: 20px 0;
         }
 
         .container {
             width: 80%;
             margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
         }
 
         h1 {
             margin: 0;
         }
 
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
+        .button-container {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 50px;
         }
 
-        nav li {
-            display: inline;
-            margin-left: 20px;
+        .button {
+            background-color: transparent;
+            width: 200px;
+            height: 200px;
+            border: none;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
         }
 
-        nav a {
-            text-decoration: none;
-            color: #ffffff;
+        .button:hover {
+            transform: scale(1.1);
+        }
+
+        #qnaButton {
+            background-color: #292929;
+        }
+
+        #characteristicsButton {
+            background-color: #292929;
+        }
+
+        #albumButton {
+            background-color: #292929;
+        }
+
+        .running-text {
+            margin-top: 30px;
             font-size: 1.2em;
-            transition: color 0.3s ease-in-out;
+            animation: rainbowText 5s infinite;
         }
 
-        nav a:hover {
-            color: #ff8adb;
-        }
-
-        .main-content {
-            margin: 40px 0;
-            text-align: center;
-        }
-
-        h2 {
-            color: #ffffff;
-        }
-
-        p {
-            color: #aaaaaa;
+        @keyframes rainbowText {
+            0% { color: #ff0000; }
+            16% { color: #ff8000; }
+            33% { color: #ffff00; }
+            50% { color: #80ff00; }
+            66% { color: #00ff80; }
+            83% { color: #0080ff; }
+            100% { color: #8000ff; }
         }
     </style>
-    <title>Kelas Elegan</title>
+    <title>Kelas 8D</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Kelas Elegan</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Beranda</a></li>
-                    <li><a href="#">Album 1</a></li>
-                    <li><a href="#">Album 2</a></li>
-                    <li><a href="#">Album 3</a></li>
-                </ul>
-            </nav>
+            <h1>Kelas 8D</h1>
         </div>
     </header>
 
-    <section class="main-content container">
-        <h2>Selamat Datang di Kelas Elegan</h2>
-        <p>Di sini Anda dapat menemukan berbagai momen indah dari kehidupan kami.</p>
-    </section>
+    <div class="button-container">
+        <div id="qnaButton" class="button" onclick="playSound('fart.mp4')"></div>
+        <div id="characteristicsButton" class="button" onclick="playSound('fart.mp4')"></div>
+        <div id="albumButton" class="button" onclick="playSound('fart.mp4')"></div>
+    </div>
+
+    <div class="container">
+        <p>Well, kelas 8D? Yap!! Itu kami, kami punya tingkah laku yang absurd. Santai aja ya kalo ketemu kami, semua murid 8D santai dan gak ada yang nakal (Mungkin). Kadang sok cool, kadang sok iye. Fun fact aja, cewek disini lebih menjadi jadi dibanding cowok nya hahahahaha. Yaudah segitu aja lah kira-kira, malas ngetik :v</p>
+    </div>
+
+    <div class="running-text">Website dibuat saat gabut dan juga yang bikin masih pemula. Makanya gak terlalu bagus</div>
+
+    <script>
+        function playSound(soundFile) {
+            var audio = new Audio(soundFile);
+            audio.play();
+        }
+    </script>
 </body>
 </html>
