--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </header>
 
     <div class="button-container">
-        <div id="qnaButton" class="button" onclick="playSound('fart.mp3')"></div>
-        <div id="characteristicsButton" class="button" onclick="playSound('fart.mp3')"></div>
-        <div id="albumButton" class="button" onclick="playSound('fart.mp3')"></div>
+        <div id="qnaButton" class="button" onclick="playSound('Lance_mode_sad.mp3')"></div>
+        <div id="characteristicsButton" class="button" onclick="playSound('Lance_mode_sad.mp3')"></div>
+        <div id="albumButton" class="button" onclick="playSound('Lance_mode_sad.mp3')"></div>
     </div>
 
     <div class="container">
