--- a/index.html
+++ b/index.html
@@ -2,92 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kelas 8D</title>
+    <title>Tahap Pengembangan</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
+        @keyframes floating {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
         }
 
-        .background-container {
-            background: linear-gradient(to bottom right, #FFD700, #FF1493);
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .header {
-            color: #ffffff;
-            font-size: 3em;
-        }
-
-        .button-container {
-            margin-top: 20px;
-        }
-
-        .button {
-            background-color: #4CAF50;
-            color: #ffffff;
-            padding: 10px 20px;
-            text-decoration: none;
-            font-size: 1.5em;
-            margin: 10px;
-            border-radius: 10px;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #45a049;
-        }
-
-        #audioControl {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            padding: 10px;
-            font-size: 1em;
-            background-color: #3498db;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #audioControl:hover {
-            background-color: #2980b9;
+        .floating-text {
+            animation: floating 2s infinite;
+            font-size: 24px;
+            color: #3498db;
         }
     </style>
 </head>
 <body>
-    <div class="background-container">
-        <h1 class="header">Kelas 8D</h1>
-        <div class="button-container">
-            <a href="https://ngl.link/8d_itshere?fbclid=PAAaagxVdafrL01J7_8ItghFAbbtmXHxMJN5iQY8Pu9gsPoch7FGx44PSZcDU" class="button" target="_blank">NGL</a>
-            <a href="feedback.html" class="button">Saran dan Masukkan</a>
-            <a href="cbg.html" class="button">Ganti Background</a>
-        </div>
-    </div>
-
-    <audio id="audio" src="Lance_mode_sad.mp3" loop></audio>
-    <button id="audioControl" onclick="toggleAudio()">Play/Pause Backsound</button>
-
-    <script>
-        var audio = document.getElementById('audio');
-
-        function toggleAudio() {
-            if (audio.paused) {
-                audio.play();
-            } else {
-                audio.pause();
-            }
-        }
-    </script>
+    <div class="floating-text">Dalam Pengembangan</div>
 </body>
 </html>
