--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             position: absolute;
             top: 20px;
             right: 20px;
+            color: black; /* warna teks diubah menjadi hitam */
         }
 
         #menuBtn {
@@ -52,6 +53,7 @@
             cursor: pointer;
             font-size: 24px;
             padding: 5px;
+            color: black;  /* Set warna teks menjadi hitam */
         }
 
         .menu {
