--- a/index.html
+++ b/index.html
@@ -1,58 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Links</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        .links-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .link-item {
-            margin-bottom: 10px;
-        }
-
-        .link-item a {
-            text-decoration: none;
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: #fff;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .link-item a:hover {
-            background-color: #2980b9;
-        }
-    </style>
+    <title>Kelas 8D</title>
 </head>
 <body>
-    <h1>My Links</h1>
+    <img src="https://placehold.co/600x400" alt="" />
 
-    <div class="links-container">
-        <div class="link-item">
-            <a href="https://example.com" target="_blank">Website</a>
-        </div>
-        <div class="link-item">
-            <a href="https://instagram.com/example" target="_blank">Instagram</a>
-        </div>
-        <!-- Add more link items as needed -->
-    </div>
+    <audio controls>
+        <source src="https://github.com/Poetr123/Web-kelas/rww/main/spongbob-ukulele.mp3 type="audio/ogg">
+<source src="https://github.com/Poetr123/Web-kelas/rww/main/spongbob-ukulele.mp3 type="audio/mpeg">
+        
 </body>
+
 </html>
